--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <div class="items">
     <div class="cube"></div>
     <div class="cube"></div>
     <div class="cube"></div>
