--- a/main.html
+++ b/main.html
@@ -3,16 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>Draggable Cubes</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    .container {
+      width: 600px;
+      height: 400px;
+      border: 2px solid #333;
+      display: flex;
+      flex-wrap: wrap;
+      position: relative;
+      margin: 20px auto;
+      background: #f0f0f0;
+    }
+
+    .cube {
+      width: 60px;
+      height: 60px;
+      background: #4caf50;
+      margin: 5px;
+      cursor: grab;
+      position: absolute; /* Important for free movement */
+      transition: transform 0.05s linear;
+    }
+
+    .cube:active {
+      cursor: grabbing;
+    }
+  </style>
 </head>
 <body>
-  <div class="items">
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
+  <h1 style="text-align:center">Draggable Cubes</h1>
+  <div class="container" id="container">
+    <div class="cube" style="top:10px; left:10px;"></div>
+    <div class="cube" style="top:10px; left:90px;"></div>
+    <div class="cube" style="top:10px; left:170px;"></div>
+    <div class="cube" style="top:90px; left:10px;"></div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
