--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h1 style="text-align:center">Draggable Cubes</h1>
-  <div class="container" id="container">
+  <div class="items" id="container">
     <div class="cube" style="top:10px; left:10px;"></div>
     <div class="cube" style="top:10px; left:90px;"></div>
     <div class="cube" style="top:10px; left:170px;"></div>
