--- a/main.html
+++ b/main.html
@@ -2,43 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Draggable Cubes</title>
+  <title>Draggable Scroll</title>
   <style>
-    .container {
-      width: 600px;
-      height: 400px;
-      border: 2px solid #333;
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .items {
       display: flex;
-      flex-wrap: wrap;
-      position: relative;
-      margin: 20px auto;
-      background: #f0f0f0;
+      overflow-x: auto;
+      width: 500px;      /* visible area */
+      height: 200px;     /* ✅ prevents 0 height issue */
+      cursor: grab;
+      border: 2px solid #333;
+    }
+
+    .items:active {
+      cursor: grabbing;
     }
 
     .cube {
-      width: 60px;
-      height: 60px;
+      min-width: 300px;  /* ✅ makes content wide enough to scroll */
+      height: 150px;
+      margin: 10px;
       background: #4caf50;
-      margin: 5px;
-      cursor: grab;
-      position: absolute; /* Important for free movement */
-      transition: transform 0.05s linear;
-    }
-
-    .cube:active {
-      cursor: grabbing;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      user-select: none;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <h1 style="text-align:center">Draggable Cubes</h1>
+  <h2>Drag to Scroll Example</h2>
   <div class="items" id="container">
-    <div class="cube" style="top:10px; left:10px;"></div>
-    <div class="cube" style="top:10px; left:90px;"></div>
-    <div class="cube" style="top:10px; left:170px;"></div>
-    <div class="cube" style="top:90px; left:10px;"></div>
+    <div class="cube">1</div>
+    <div class="cube">2</div>
+    <div class="cube">3</div>
+    <div class="cube">4</div>
+    <div class="cube">5</div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const items = document.querySelector(".items");
+
+    let isDown = false;
+    let startX;
+    let scrollLeft;
+
+    items.addEventListener("mousedown", (e) => {
+      isDown = true;
+      startX = e.pageX - items.offsetLeft;
+      scrollLeft = items.scrollLeft;
+    });
+
+    items.addEventListener("mouseleave", () => {
+      isDown = false;
+    });
+
+    items.addEventListener("mouseup", () => {
+      isDown = false;
+    });
+
+    items.addEventListener("mousemove", (e) => {
+      if (!isDown) return;
+      e.preventDefault();
+      const x = e.pageX - items.offsetLeft;
+      const walk = (x - startX) * 1; // scroll speed
+      items.scrollLeft = scrollLeft - walk;
+    });
+  </script>
 </body>
 </html>
